added POST user and DELETE user endpoints
